<resources>
    <string name="app_name">京媒SDK</string>

    <string name="permissions_list">权限申请</string>
    <string name="request_phone_state">读取设备信息权限</string>
    <string name="request_storage">读写外部存储权限</string>
    <string name="request_location">获取粗略定位权限</string>
    <string name="request_location_gps">获取精确定位权限</string>
    <string name="request_app_list">读取应用列表权限</string>

    <string name="e_splash_title">京东渲染-开屏</string>
    <string name="e_video_splash_title">京东渲染-开屏-视频</string>
    <string name="e_splash_multi_process_title">京东渲染-开屏-多进程</string>
    <string name="e_feed_multi_request_title">京东渲染-开屏-批量请求</string>
    <string name="e_banner_title">京东渲染-横幅</string>
    <string name="e_inter_title">京东渲染-插屏</string>
    <string name="e_feed_title">京东渲染-信息流</string>
    <string name="e_preload_ad_title">京东渲染-预加载广告</string>
    <string name="e_preload_ad_multi_process_title">京东渲染-预加载广告-多进程</string>

    <string name="e_feed_single">模板信息流-单独显示</string>
    <string name="e_feed_single_multi_process">模板信息流-多进程</string>
    <string name="e_feed_listview">模板信息流-LISTVIEW</string>
    <string name="e_feed_recyclerview">模板信息流-RECYCLERVIEW</string>
    <string name="e_feed_scrollview">模板信息流-SCROLLVIEW</string>
    <string name="e_feed_recyclerview_linear">RecyclerView-线性展示</string>
    <string name="e_feed_recyclerview_grid">RecyclerView-网格展示</string>
    <string name="e_feed_recyclerview_staggered">RecyclerView-瀑布流展示</string>
    <string name="e_feed_simulate">模板信息流-仿真展示</string>

    <string name="n_splash_title">媒体渲染-开屏</string>
    <string name="n_banner_title">媒体渲染-横幅</string>
    <string name="n_inter_title">媒体渲染-插屏</string>
    <string name="n_feed_title">媒体渲染-信息流</string>
    <string name="n_feed_listview">媒体渲染-信息流-LISTVIEW</string>
    <string name="n_feed_video_listview">媒体渲染-信息流-视频-LISTVIEW</string>
    <string name="n_feed_recyclerview">媒体渲染-信息流-RECYCLERVIEW</string>
    <string name="n_feed_video_title">媒体渲染-信息流-视频</string>

    <!--尺寸配置-->
    <string name="choose_scale_w_h">请选择宽高比</string>
    <string name="scale_w_h">宽度/总宽度 = %1$ddp / %2$ddp = %3$.2f</string>

    <!--加载按钮的文案-->
    <string name="btn_ad_load_default">%1$s广告加载</string>
    <string name="btn_ad_loading">%1$s广告加载中…</string>
    <string name="btn_ad_load_failed">%1$s广告加载失败, 请尝试重试</string>

    <!--广告流程、数据等相关文案-->
    <string name="ad_load_success">%s广告加载成功</string>
    <string name="ad_video_player_status">%1$s视频广告当前播放状态: %2$d</string>
    <string name="ad_video_player_failed">%1$s视频广告播放失败【code:%2$d,message:%3$s】</string>
    <string name="ad_load_failed">%1$s广告加载失败【code:%2$d,message:%3$s】</string>
    <string name="ad_render_success">%s广告渲染成功</string>
    <string name="ad_render_failed">%1$s广告渲染失败【code:%2$d,message:%3$s】</string>
    <string name="ad_exposure">%s广告曝光</string>
    <string name="ad_count_down">%1$s广告倒计时：%2$d</string>
    <string name="ad_skip">跳过 %d</string>
    <string name="ad_click">%s广告被点击</string>
    <string name="ad_dismiss">%s广告被关闭</string>
    <string name="ad_data_price">%1$s广告价格是：%2$d ，单位：分</string>

    <!--SDK 自测工具-->
    <string name="tools_title">SDK 自测工具</string>
    <string name="tools_infrastructure_title">基础信息</string>
    <string name="tools_access_title">权限配置</string>
    <string name="tools_private_title">隐私配置</string>


</resources>