<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/permissions_list"
        android:orderInCategory="100"
        android:title="@string/permissions_list"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/phone_state"
                android:orderInCategory="100"
                android:title="@string/request_phone_state"
                app:showAsAction="never" />

            <item
                android:id="@+id/location"
                android:orderInCategory="100"
                android:title="@string/request_location"
                app:showAsAction="never" />
            <item
                android:id="@+id/location_gps"
                android:orderInCategory="100"
                android:title="@string/request_location_gps"
                app:showAsAction="never" />

            <item
                android:id="@+id/storage"
                android:orderInCategory="100"
                android:title="@string/request_storage"
                app:showAsAction="never" />

            <!--  <item
                  android:id="@+id/app_list"
                  android:orderInCategory="100"
                  android:title="@string/request_app_list"
                  app:showAsAction="never" />-->
        </menu>

    </item>
</menu>